Fixing spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@
     height: 500px;
 }
 
-.MainTitleTextbook{
+.MainTitle{
     color: white;
     width: 100%;
     font-family: 'Ubuntu';
@@ -230,25 +230,6 @@
     text-align: center;
     margin-top: 3vw;
 }
-
-.MainTitleTulisanNala{
-    color: white;
-    width: 100%;
-    font-family: 'Ubuntu';
-    font-size: 5vw;
-    text-align: center;
-    margin-top: 10vw;
-}
-
-.MainTitleAsthaproject{
-    color: white;
-    width: 100%;
-    font-family: 'Ubuntu';
-    font-size: 5vw;
-    text-align: center;
-    margin-top: 10vw;
-}
-
 
 .MainContainer{
     min-height: 100vh;
